--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -550,6 +550,16 @@ video {
   margin-bottom: 50px;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-\[20px\] {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
