Finished Rendering Card Data and Delete
Program can now render all the fields user put in for the "questionForm" and the program will display all the fields in the correct order on the card.

Also delete with authorization works. Only authors of cards can delete their own card.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1148,6 +1148,10 @@ input:checked + .toggle-bg {
   margin-bottom: 0.75rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .mb-\[30px\] {
   margin-bottom: 30px;
 }
